--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <main class="main">
         <section class="charactersList">
             <div class="container charactersList__container">
+                <form id="search" class="main__form" action="#">
+                    <input class="main__search" id="search" type="text" placeholder="Enter the name of the character you want to find">
+                    <button class="main__button" type="submit">Search</button>
+                </form>
                 <ul id="charactersList">
 
                 </ul>
