--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </footer>
 
-    <script src="src/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
